BUGFIXES: Fixed compile error where rgba() was trying to grab a non-existant colour F3CSS-185; Tab overflow fade now works out of the box
UPDATES:
Card and Alert components now use the new box shadow in them by default
Hero no longer @extends background--cover, but this behaviour can be turned on via hero-config
Avatar border-radius is now a percentage so the corner size scales with the avatar element itself (aka prevents smaller avatars from having fatty boom batty rounded corners)
Colour of tab overflow fade is now configurable

--- a/src/FoundryCSS/base/_theme.scss
+++ b/src/FoundryCSS/base/_theme.scss
@@ -121,8 +121,8 @@ $corner-radius: 0.25rem !default;
  */
 
 $box-shadow: 0 #{$horizontal-spacing} #{$horizontal-spacing * 2} 0
-        rgba(map-get($colors, "shadow"), 0.1),
-    0 1px 2px 0 rgba(map-get($colors, "shadow"), 0.1);
+        rgba(map-get($colors, "default"), 0.1),
+    0 1px 2px 0 rgba(map-get($colors, "default"), 0.1);
 
 /*
  * 7. Layers
