--- a/src/FoundryCSS/ui/forms/layout/Field/_field.scss
+++ b/src/FoundryCSS/ui/forms/layout/Field/_field.scss
@@ -4,7 +4,6 @@
  * Provides positioning context to a field, for positioning supplementary elements
  * such as icons.
  *
- * !! This module @extends %position--relative from FoundryCSS/ui/utilities/position.scss !!
  */
 
 .form-field {
@@ -18,9 +17,9 @@
 }
 
 .form-field__icon--right {
-    right: rhythm(1.25);
+    right: spacing(2);
 }
 
 .form-field__icon--left {
-    left: rhythm(1.25);
+    left: spacing(2);
 }
